# mitprotocol

./: README.md
doit/: doit_android.sh  doit_centos_x64.sh  doit_centos_x64_java.sh  doit_centos_x64_python.sh  doit_iphone.sh
doit/swig/: mitprotocol.i
doit/toolchain/polly/: android-ndk-r10e-api-9-armeabi-v7a.cmake  android-ndk-r12b-api-14-armeabi-v7a-neon.cmake  android-ndk-r12b-api-9-armeabi-v7a-neon.cmake  iOSToolchain.cmake
mitprotocol/: CMakeLists.txt
mitprotocol/src/easytar/: easytar.cpp  easytar.h
mitprotocol/src/mycross/: mycross.h
mitprotocol/src/traffic/: mitprotocol.h  mitprotocolimpl.cpp  mitprotocolimpl.h
mitprotocol/src/wfdb/: wfdblocal.cpp  wfdblocal.h
mitprotocol/test/: CMakeLists.txt  mytest.cpp
